      symbols file.
  * Use substitution to keep Standards-Version in sync (430.64-5).
  * Allow alternative libnvidia-{tesla,legacy}-*-cfg1 packages to substitute
    libnvidia-cfg1 in third-party packages (450.57-2).
    - Add Provides: libnvidia-cfg.so.1 (= ${nvidia:Version}).
    - Generate alternative versioned dependency on libnvidia-cfg.so.1 through
      the symbols file.
  * Bump Standards-Version to 4.5.0. No changes needed.

  [ Vincent Cheng ]
  * Remove myself from Uploaders.

 -- Andreas Beckmann <anbe@debian.org>  Sat, 28 Dec 2019 12:12:32 +0100

nvidia-graphics-drivers (340.108-1~git4deb8jessie) UNRELEASED; urgency=medium

  * Convert packaging repository from SVN to GIT.
  * Add debian/rules targets for archiving the tarballs in a separate
    repository using sparse checkouts and git-lfs as storage backend
    (390.87-3).
  * Create and commit tarball symlinks for legacy branches (430.64-1).

 -- Andreas Beckmann <anbe@debian.org>  Sat, 28 Dec 2019 12:12:32 +0100

nvidia-graphics-drivers (340.108-1) UNRELEASED; urgency=medium

  * The 340.xx legacy driver series has been declared as End-of-Life by
    NVIDIA. No further updates fixing security issues, critical bugs, or
    adding support for new Xorg or Linux releases will be issued.
    https://nvidia.custhelp.com/app/answers/detail/a_id/3142

  * New upstream legacy 340xx branch release 340.108 (2019-12-23).
    - Updated the nvidia-drm kernel module for compatibility with the removal
      of the DRIVER_PRIME flag in recent Linux kernel versions.
    - Updated nvidia-bug-report.sh to search the systemd journal for
      gdm-x-session logs.
    - Fixed a build failure, "too many arguments to function 'get_user_pages'",
      when building the NVIDIA kernel module for Linux kernel v4.4.168.
    - Fixed a build failure, "implicit declaration of function do_gettimeofday",
      when building the NVIDIA kernel module for Linux kernel 5.0 release
      candidates.