@@ -193,7 +193,7 @@ override_dh_auto_build: build-stamp
 # Build two kernel module source tarballs for use with
 #  - module-assistant and make-kpkg
 #  - dkms
-.PHONY: install-into-tmp build-kernel-source-tree build-kernel-dkms-tree kernel-source-tree
+.PHONY: install-into-tmp build-kernel-source-tree build-kernel-dkms-tree
 override_dh_auto_install: install-into-tmp
 override_dh_auto_install: build-kernel-source-tree build-kernel-dkms-tree
 
@@ -240,12 +240,13 @@ build-kernel-dkms-tree: build-kernel-source-tree
 	    && $(RM) -r .pc debian
 	ls -la $(dkms_source)
 
-# This target is not used by the package build process.  You can use it if
-# you want to work with the patches that get applied to the module source.
-kernel-source-tree: prepare build-kernel-source-tree
+kernel-source-tree: build-stamp $(AUTOGEN)
 	$(RM) -r $@
-	cp -a $(module_source) $@
+	cp -a build/kernel $@
 	cd $@ && QUILT_PATCHES=../debian/module/debian/patches quilt --quiltrc /dev/null push -a || test $$? = 2
+
+# Test that the patches can be applied to the module source.
+override_dh_auto_test: kernel-source-tree
 
 override_dh_installchangelogs:
 	dh_installchangelogs debian/tmp/NVIDIA_Changelog
