@@ -68,6 +68,7 @@ nvidia-graphics-drivers (340.108-1~git4deb9stretch) UNRELEASED; urgency=medium
     - Add Provides: libnvidia-cfg.so.1 (= ${nvidia:Version}).
     - Generate alternative versioned dependency on libnvidia-cfg.so.1 through
       the symbols file.
+  * Test that the patches can be applied to the module source (450.66-1).
   * Bump Standards-Version to 4.5.0. No changes needed.
 
   [ Vincent Cheng ]
